projekt-compiler/test/misc/unsorted/success/s_multi_use_nil.rail
$'main'(--):
 \
  \
   \
    \
     \
      \
       \       #
        \      |
         \     |
          ----[n]---(!n!)--\
               |           |
               \-----------/

result: <NIL>