projekt-compiler/test/misc/unsorted/fail/e_unknown_sign.rail
$ 'main'(--):
 \
  \
   \
    \
     \---ä---[Hello World\n\]o---#